Wed Mar 12 20:36:40 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: cleanup the Go menu

Tue Mar 11 14:53:12 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkexport.c, gtkgame.c, gtktoolbar.c, xpm/dice.xpm,
	xpm/leftarrow.xpm, xpm/rightarrow.xpm, xpm/stock_export.xpm,
	xpm/stock_import.xpm, xpm/stock_stop_16.xpm, xpm/stock_undo_16.xpm,
	xpm/tb_redouble.xpm: cleanup in the help menu and delete some unused
	xpms

Mon Mar 10 09:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkfile.c: Remove export button/menu item (use save instead)

Sun Mar  9 12:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkfile.c: Move load commands from menu into load dialog.
	  (and other small changes to this dialog)
	* gtkexport.c: Move generate html images from file menu into export settings.

Sat Mar  8 09:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* boardpos.c, render.c: Change 2d direction arrow to look like 3d arrow (smaller and near bearoff tray).
		Move cube to side of board.  Swap position of pieces on bar.

Fri Mar  7 22:28:52 CET 2008 Christian Anthon <anthon@kiku.dk>

	* backgammon.h, gnubg.c, gtkgame.c, gtkpanels.c, board3d/Makefile.am,
	board3d/gtkcolour3d.c: minor stuff and warnings

Fri Feb 29 19:12:45 2007 Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c, gtkcolour3d.c: Change 3d previews to use widgets not pixmaps.

Thu Feb 28 15:15:08 CET 2008 Christian Anthon <anthon@kiku.dk>

	* osr.c: fix bug introduced by uint changes

Wed Feb 27 21:22:47 CET 2008 Christian Anthon <anthon@kiku.dk>

	* gtkoptions.c: add reset all to defaults button.
	* sound.c: fix sound default file bug on windows

Tue Feb 26 12:35:23 CET 2008 Christian Anthon <anthon@kiku.dk>

	* makebearoff.c: don't print progress to stderr unless on a TTY.

Mon Feb 25 23:16:26 CET 2008 Christian Anthon <anthon@kiku.dk>

	* text.c, html.c, latex.c: Allow export of games with beavers/raccoons
	in them.

Mon Feb 25 15:12:08 CET 2008 Christian Anthon <anthon@kiku.dk>
