@@ -1,3 +1,8 @@
+Wed Mar 12 23:06:32 CET 2008 Christian Anthon <anthon@kiku.dk>
+
+	* gtkgame.c, gtkpanels.c, gtkpanels.h: update game selection menu to
+	gtk_combo_box and remove the redundant names
+
 Wed Mar 12 20:36:40 CET 2008 Christian Anthon <anthon@kiku.dk>
 
 	* gtkgame.c: cleanup the Go menu
